fixed modal cover not covering full screen

--- a/css/banana.css
+++ b/css/banana.css
@@ -299,7 +299,7 @@
 	height:100%;
 	left:0px;
 	top:0px; 
-	position:absolute;
+	position:fixed;
 }
 .BModalControlBar{
 	height:20px; 
